--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "bcrypt": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^3.1.2",
     "express": "^4.16.3",
     "jquery": "^3.5.1",
@@ -33,6 +35,7 @@
     "mongoose": "^5.1.2",
     "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
+    "ng2-charts": "^2.3.2",
     "rxjs": "6.5.2",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^1.9.0",
