--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
     "ng2-charts": "^2.3.2",
+    "ngx-dropzone": "^2.2.2",
     "rxjs": "6.5.2",
     "semantic-ui-css": "^2.4.1",
-    "tslib": "^1.9.0",
+    "tslib": "^1.13.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
